--- a/.github/workflows/SiteMonitor.yml
+++ b/.github/workflows/SiteMonitor.yml
@@ -5,11 +5,16 @@ name: SiteMonitor
 
 # Controls when the action will run. 
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   # Triggers the workflow every 10 min
   schedule:
     # * is a special character in YAML so you have to quote this string
     # minute (0 - 59) | hour (0 - 23) | day of the month (1 - 31) | month (1 - 12 or JAN-DEC) | day of the week (0 - 6 or SUN-SAT)
-    - cron:  '*/5 * * * *'
+    - cron:  "*/5 * * * *"
 
 jobs:
   # This workflow contains a Two jobs called "PING - ALERT"
