--- a/.github/workflows/SiteMonitor.yml
+++ b/.github/workflows/SiteMonitor.yml
@@ -66,7 +66,7 @@ jobs:
       
       # Task[3]: Run SetEnviroment script
       - name: Run SetEnviroment.sh scripts
-        run: ~/Testing.sh
+        run: ~/SetEnviroment.sh
         
       # Task[4]: Run MonitScript.py
       - name: execute .py script
